...
                  ]}
                  onPress={onAdd}
                />
              )}
              <Divider />
              <Button
                label="Show Details"
                systemImage="info.circle"
                onPress={onDetails}
              />
              {showsPersonLink ? (
                <Button
                  label="View Person"
...
